--- a/Proyecto1_Tingeso/src/main/resources/application.properties
+++ b/Proyecto1_Tingeso/src/main/resources/application.properties
@@ -1,16 +1,16 @@
 server.port = 8090
 
-spring.datasource.url=jdbc:mysql://localhost:3306/Tingeso
+#spring.datasource.url=jdbc:mysql://localhost:3306/tingeso
+#spring.datasource.username=root
+#spring.datasource.password=password
+#spring.jpa.hibernate.ddl-auto=update
+
+spring.datasource.url=${DB_URL}
 spring.datasource.username=root
 spring.datasource.password=password
-spring.jpa.hibernate.ddl-auto=update
-
-#spring.datasource.url=${jdbc:mysql://mysql-db:3306/bd?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true&useSSL=false}
-#spring.datasource.username=${root}
-#spring.datasource.password=${password}
-#spring.jpa.show-sql=true
-#spring.jpa.hibernate.ddl-auto=create
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.jpa.hibernate.use-new-id-generator-mappings=false
-#spring.jpa.properties.hibernate.globally_quoted_identifiers=true
-#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.use-new-id-generator-mappings=false
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
