--- a/Proyecto1_Tingeso/docker-compose.yml
+++ b/Proyecto1_Tingeso/docker-compose.yml
@@ -1,24 +1,25 @@
-version: '3.8'
+version: "3.8"
 services:
   mysql-db:
-    image: mysql:latest
+    image: mysql
     restart: always
     volumes:
-      - mysql-data:/var/lib/mysql
+      - ./data/db:/var/lib/mysql
     environment:
-      MYSQL_ROOT_PASSWORD: password
-      MYSQL_DATABASE: bd
+      - MYSQL_ROOT_PASSWORD=password
+      - MYSQL_DATABASE=tingeso
+      - DB_DIALECT=MySQL8Dialect
     ports:
-      - "3307:3306"
+      - 3307:3306
   app:
     container_name: app-tingeso
     image: joakinroa151/app-tingeso:latest
     ports:
-      - "8080:8090"
+      - '8090:8090'
     environment:
-      DB_URL: jdbc:mysql://mysql-db:3306/bd?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false
-      DB_USERNAME: root
-      DB_PASSWORD: password
+      - DB_URL=jdbc:mysql://mysql-db:3306/tingeso
+      - DB_USERNAME=root
+      - DB_PASSWORD=password
     deploy:
       restart_policy:
         condition: on-failure
